# docs/api/openapi.yml
@@ -431,7 +431,7 @@ components:
           x-struct:
           x-validate:
         timeout_seconds:
-          maximum: 300
+          maximum: 30
           minimum: 1
           type: integer
           x-struct:
@@ -515,7 +515,7 @@ components:
           x-struct:
           x-validate:
         timeout_seconds:
-          maximum: 300
+          maximum: 30
           minimum: 1
           type: integer
           x-struct:
@@ -669,7 +669,7 @@ components:
                 x-struct:
                 x-validate:
               timeout_seconds:
-                maximum: 300
+                maximum: 30
                 minimum: 1
                 type: integer
                 x-struct:
@@ -1257,7 +1257,7 @@ components:
               x-struct:
               x-validate:
             timeout_seconds:
-              maximum: 300
+              maximum: 30
               minimum: 1
               type: integer
               x-struct:
@@ -1347,7 +1347,7 @@ components:
           x-struct:
           x-validate:
         timeout_seconds:
-          maximum: 300
+          maximum: 30
           minimum: 1
           type: integer
           x-struct:
@@ -1696,7 +1696,7 @@ paths:
                         x-struct:
                         x-validate:
                       timeout_seconds:
-                        maximum: 300
+                        maximum: 30
                         minimum: 1
                         type: integer
                         x-struct:
@@ -1844,7 +1844,7 @@ paths:
                   x-struct:
                   x-validate:
                 timeout_seconds:
-                  maximum: 300
+                  maximum: 30
                   minimum: 1
                   type: integer
                   x-struct:
@@ -1999,7 +1999,7 @@ paths:
                         x-struct:
                         x-validate:
                       timeout_seconds:
-                        maximum: 300
+                        maximum: 30
                         minimum: 1
                         type: integer
                         x-struct:
@@ -2184,7 +2184,7 @@ paths:
                   x-struct:
                   x-validate:
                 timeout_seconds:
-                  maximum: 300
+                  maximum: 30
                   minimum: 1
                   type: integer
                   x-struct:
@@ -2339,7 +2339,7 @@ paths:
                         x-struct:
                         x-validate:
                       timeout_seconds:
-                        maximum: 300
+                        maximum: 30
                         minimum: 1
                         type: integer
                         x-struct:
@@ -3524,7 +3524,7 @@ paths:
                           x-struct:
                           x-validate:
                         timeout_seconds:
-                          maximum: 300
+                          maximum: 30
                           minimum: 1
                           type: integer
                           x-struct:
@@ -3690,7 +3690,7 @@ paths:
                   x-struct:
                   x-validate:
                 timeout_seconds:
-                  maximum: 300
+                  maximum: 30
                   minimum: 1
                   type: integer
                   x-struct:
@@ -3849,7 +3849,7 @@ paths:
                         x-struct:
                         x-validate:
                       timeout_seconds:
-                        maximum: 300
+                        maximum: 30
                         minimum: 1
                         type: integer
                         x-struct:
